Добавил разметку для первого слайда

--- a/index.html
+++ b/index.html
@@ -10,11 +10,34 @@
 
     <div class="swiper main-swiper">
         <div class="swiper-wrapper main-swiper__wrapper">
-            <div class="swiper-slide main-swiper__slide one"></div>
+            <div class="swiper-slide main-swiper__slide one">
+                <div class="layout one__layout">
+                    <a class="one__logo" href="index.html">
+                        <svg class="one__logo-icon" viewBox="0 0 54 16">
+                            <use href="assets/img/defs.svg#logo"></use>
+                        </svg>
+                    </a>
+                    <h2 class="h h--2 one__h">Постройте дом быстрее и легче через приложение</h2>
+                    <div class="one__btn-wrap">
+                        <button class="btn btn--ios btn--large" type="button">
+                            <img class="btn__icon btn__icon--ios" src="assets/img/ios-large.svg" alt="" aria-hidden="true">
+                        </button>
+                        <button class="btn btn--android btn--large" type="button">
+                            <img class="btn__icon btn__icon--android" src="assets/img/android-large.svg" alt="" aria-hidden="true">
+                        </button>
+                        <span class="badge badge__soon">Скоро запуск</span>
+                    </div>
+                </div>
+                <button class="swiper-button-next main-swiper__btn main-swiper__btn--next">
+                    <svg class="main-swiper__btn-icon" viewBox="0 0 24 24">
+                        <use href="assets/img/defs.svg#arrow-down"></use>
+                    </svg>
+                    <span class="main-swiper__btn-title">Как это работает?</span>
+                </button>
+            </div>
         </div>
         <div class="swiper-pagination main-swiper__pagination"></div>
         <div class="swiper-button-prev main-swiper__btn main-swiper__btn--prev"></div>
-        <div class="swiper-button-next main-swiper__btn main-swiper__btn--next"></div>
     </div>
     
 </body>
