Добавил разметку для второго слайда

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     </a>
                     <h2 class="h h--2 one__h">Постройте дом быстрее и легче через приложение</h2>
                     <div class="one__btn-wrap">
-                        <button class="btn btn--ios btn--large" type="button">
+                        <button class="btn btn--ios btn--large one__btn-ios" type="button">
                             <img class="btn__icon btn__icon--ios" src="assets/img/ios-large.svg" alt="" aria-hidden="true">
                         </button>
-                        <button class="btn btn--android btn--large" type="button">
+                        <button class="btn btn--android btn--large one__btn-android" type="button">
                             <img class="btn__icon btn__icon--android" src="assets/img/android-large.svg" alt="" aria-hidden="true">
                         </button>
-                        <span class="badge badge__soon">Скоро запуск</span>
+                        <span class="badge badge--soon one__badge">Скоро запуск</span>
                     </div>
                 </div>
                 <button class="swiper-button-next main-swiper__btn main-swiper__btn--next">
@@ -33,6 +33,54 @@
                         <use href="assets/img/defs.svg#arrow-down"></use>
                     </svg>
                     <span class="main-swiper__btn-title">Как это работает?</span>
+                </button>
+            </div>
+            <div class="swiper-slide main-swiper__slide two">
+                <div class="layout two__layout">
+                    <a class="two__logo" href="index.html">
+                        <svg class="two__logo-icon" viewBox="0 0 54 16">
+                            <use href="assets/img/defs.svg#logo"></use>
+                        </svg>
+                    </a>
+                    <span class="badge badge--soon two__badge">Скоро запуск</span>
+                    <button class="btn btn--ios btn--small two__btn-ios" type="button">
+                        <img class="btn__icon btn__icon--ios" src="assets/img/ios-small.svg" alt="" aria-hidden="true">
+                    </button>
+                    <button class="btn btn--android btn--small two__btn-android" type="button">
+                        <img class="btn__icon btn__icon--android" src="assets/img/android-small.svg" alt="" aria-hidden="true">
+                    </button>
+                    <h2 class="h h--2 two__h">Как это работает?</h2>
+                    <div class="swiper two__swiper swiper-two">
+                        <div class="swiper-wrapper swiper-two__wrapper">
+                            <div class="swiper-slide swiper-two__slide slide-swiper-two">
+                                <div class="slide-swiper-two__body">
+                                    <span class="slide-swiper-two__number">01</span>
+                                    <h3 class="p p--large slide-swiper-two__p">Выберите проект дома и застройщика</h3>
+                                    <div class="slide-swiper-two__img"></div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide swiper-two__slide slide-swiper-two">
+                                <div class="slide-swiper-two__body">
+                                    <span class="slide-swiper-two__number">02</span>
+                                    <h3 class="p p--large slide-swiper-two__p">Начните строительство</h3>
+                                    <div class="slide-swiper-two__img"></div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide swiper-two__slide slide-swiper-two">
+                                <div class="slide-swiper-two__body">
+                                    <span class="slide-swiper-two__number">03</span>
+                                    <h3 class="p p--large slide-swiper-two__p">Наблюдайте стройку в приложении</h3>
+                                    <div class="slide-swiper-two__img"></div>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                </div>
+                <button class="swiper-button-next main-swiper__btn main-swiper__btn--next">
+                    <svg class="main-swiper__btn-icon" viewBox="0 0 24 24">
+                        <use href="assets/img/defs.svg#arrow-down"></use>
+                    </svg>
+                    <span class="main-swiper__btn-title">Архитектура</span>
                 </button>
             </div>
         </div>
