--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div class="swiper-slide main-swiper__slide one">
                 <div class="layout one__layout">
                     <a class="one__logo" href="index.html">
-                        <svg class="one__logo-icon" viewBox="0 0 54 16">
-                            <use href="assets/img/defs.svg#logo"></use>
+                        <svg class="one__logo-icon" viewBox="0 0 54 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M33.3409 14.0729L29.2009 8.00089L33.3409 1.92724H36.815L32.6755 8.00089L36.8153 14.0729H33.3409ZM28.743 14.0729H25.7755V1.94964L28.743 1.91945V14.0729ZM21.1776 14.0729H17.7031L21.8429 8.00089L17.7034 1.92724H21.1776L25.3177 8.00089L21.1776 14.0729ZM42.6261 14.0742V14.0614C41.0293 13.9981 39.6679 13.4128 38.5739 12.3191C37.3903 11.1042 36.8178 9.69236 36.8178 8.00089C36.8178 6.34723 37.4031 4.90371 38.5739 3.70812C39.7571 2.52536 41.2139 1.92724 42.9186 1.92724C44.56 1.92724 45.9979 2.48057 47.2001 3.56809C47.2447 3.61271 47.2957 3.65717 47.3402 3.6953L45.2471 5.74944C44.6809 5.1325 43.8667 4.76367 42.9186 4.76367C41.1184 4.76367 39.7632 6.15657 39.7632 8.00089C39.7632 9.84506 41.1184 11.2316 42.9186 11.2316L47.8052 11.2378L54 0H11.0012C9.65594 0 8.41678 0.731661 7.7675 1.90956L7.36154 2.64576V10.6145L12.7627 1.91945H16.6131V14.0549H13.6518V5.95195L8.61871 14.0549H4.40034V8.01761L0 16H41.8401C43.4836 16 45.0151 15.2784 46.0755 14.0742H42.6261Z" fill="currentColor"/>
                         </svg>
                     </a>
                     <h2 class="h h--2 one__h">Постройте дом быстрее и легче через приложение</h2>
@@ -29,8 +29,8 @@
                     </div>
                 </div>
                 <button class="swiper-button-next main-swiper__btn main-swiper__btn--next">
-                    <svg class="main-swiper__btn-icon" viewBox="0 0 24 24">
-                        <use href="assets/img/defs.svg#arrow-down"></use>
+                    <svg class="main-swiper__btn-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 13.1727L16.95 8.22266L18.364 9.63666L12 16.0007L5.63599 9.63666L7.04999 8.22266L12 13.1727Z" fill="#090909"/>
                     </svg>
                     <span class="main-swiper__btn-title">Как это работает?</span>
                 </button>
@@ -38,8 +38,8 @@
             <div class="swiper-slide main-swiper__slide two">
                 <div class="layout two__layout">
                     <a class="two__logo" href="index.html">
-                        <svg class="two__logo-icon" viewBox="0 0 54 16">
-                            <use href="assets/img/defs.svg#logo"></use>
+                        <svg class="two__logo-icon" viewBox="0 0 54 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M33.3409 14.0729L29.2009 8.00089L33.3409 1.92724H36.815L32.6755 8.00089L36.8153 14.0729H33.3409ZM28.743 14.0729H25.7755V1.94964L28.743 1.91945V14.0729ZM21.1776 14.0729H17.7031L21.8429 8.00089L17.7034 1.92724H21.1776L25.3177 8.00089L21.1776 14.0729ZM42.6261 14.0742V14.0614C41.0293 13.9981 39.6679 13.4128 38.5739 12.3191C37.3903 11.1042 36.8178 9.69236 36.8178 8.00089C36.8178 6.34723 37.4031 4.90371 38.5739 3.70812C39.7571 2.52536 41.2139 1.92724 42.9186 1.92724C44.56 1.92724 45.9979 2.48057 47.2001 3.56809C47.2447 3.61271 47.2957 3.65717 47.3402 3.6953L45.2471 5.74944C44.6809 5.1325 43.8667 4.76367 42.9186 4.76367C41.1184 4.76367 39.7632 6.15657 39.7632 8.00089C39.7632 9.84506 41.1184 11.2316 42.9186 11.2316L47.8052 11.2378L54 0H11.0012C9.65594 0 8.41678 0.731661 7.7675 1.90956L7.36154 2.64576V10.6145L12.7627 1.91945H16.6131V14.0549H13.6518V5.95195L8.61871 14.0549H4.40034V8.01761L0 16H41.8401C43.4836 16 45.0151 15.2784 46.0755 14.0742H42.6261Z" fill="currentColor"/>
                         </svg>
                     </a>
                     <span class="badge badge--soon two__badge">Скоро запуск</span>
@@ -77,12 +77,128 @@
                       </div>
                 </div>
                 <button class="swiper-button-next main-swiper__btn main-swiper__btn--next">
-                    <svg class="main-swiper__btn-icon" viewBox="0 0 24 24">
-                        <use href="assets/img/defs.svg#arrow-down"></use>
+                    <svg class="main-swiper__btn-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 13.1727L16.95 8.22266L18.364 9.63666L12 16.0007L5.63599 9.63666L7.04999 8.22266L12 13.1727Z" fill="#090909"/>
                     </svg>
                     <span class="main-swiper__btn-title">Архитектура</span>
                 </button>
             </div>
+            <div class="swiper-slide main-swiper__slide three">
+                <div class="layout three__layout">
+                    <a class="three__logo" href="index.html">
+                        <svg class="three__logo-icon" viewBox="0 0 54 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M33.3409 14.0729L29.2009 8.00089L33.3409 1.92724H36.815L32.6755 8.00089L36.8153 14.0729H33.3409ZM28.743 14.0729H25.7755V1.94964L28.743 1.91945V14.0729ZM21.1776 14.0729H17.7031L21.8429 8.00089L17.7034 1.92724H21.1776L25.3177 8.00089L21.1776 14.0729ZM42.6261 14.0742V14.0614C41.0293 13.9981 39.6679 13.4128 38.5739 12.3191C37.3903 11.1042 36.8178 9.69236 36.8178 8.00089C36.8178 6.34723 37.4031 4.90371 38.5739 3.70812C39.7571 2.52536 41.2139 1.92724 42.9186 1.92724C44.56 1.92724 45.9979 2.48057 47.2001 3.56809C47.2447 3.61271 47.2957 3.65717 47.3402 3.6953L45.2471 5.74944C44.6809 5.1325 43.8667 4.76367 42.9186 4.76367C41.1184 4.76367 39.7632 6.15657 39.7632 8.00089C39.7632 9.84506 41.1184 11.2316 42.9186 11.2316L47.8052 11.2378L54 0H11.0012C9.65594 0 8.41678 0.731661 7.7675 1.90956L7.36154 2.64576V10.6145L12.7627 1.91945H16.6131V14.0549H13.6518V5.95195L8.61871 14.0549H4.40034V8.01761L0 16H41.8401C43.4836 16 45.0151 15.2784 46.0755 14.0742H42.6261Z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                    <span class="badge badge--soon three__badge">Скоро запуск</span>
+                    <button class="btn btn--ios btn--small three__btn-ios" type="button">
+                        <img class="btn__icon btn__icon--ios" src="assets/img/ios-small.svg" alt="" aria-hidden="true">
+                    </button>
+                    <button class="btn btn--android btn--small three__btn-android" type="button">
+                        <img class="btn__icon btn__icon--android" src="assets/img/android-small.svg" alt="" aria-hidden="true">
+                    </button>
+                    <h2 class="h h--2 three__h">Будьте в тренде, найдите проект дома в каталоге всех стран</h2>
+                    <div class="swiper three__swiper swiper-three">
+                        <div class="swiper-wrapper swiper-three__wrapper">
+                            <div class="swiper-slide swiper-three__slide slide-swiper-three">
+                                <a class="slide-swiper-three__body" href="#">
+                                    <span class="slide-swiper-three__title">Forest</span>
+                                    <span class="slide-swiper-three__new">Новый проект</span>
+                                    <img class="slide-swiper-three__flag" src="assets/img/three/Czech.svg" alt="Флаг Чехии">
+                                    <picture>
+                                        <source
+                                            type="image/webp"
+                                            srcset="assets/img/three/i-1@2x.webp 2x, assets/img/three/i-1@1x.webp 1x">
+                                        <source
+                                            type="image/png"
+                                            srcset="assets/img/three/i-1@2x.png 2x, assets/img/three/i-1@1x.png 1x">
+                                        <img class="slide-swiper-three__img" src="assets/img/three/i-1@1x.png" alt="Фотография дома">
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="swiper-slide swiper-three__slide slide-swiper-three">
+                                <a class="slide-swiper-three__body" href="#">
+                                    <span class="slide-swiper-three__title">Man’s Land</span>
+                                    <span class="slide-swiper-three__new">Новый проект</span>
+                                    <img class="slide-swiper-three__flag" src="assets/img/three/germany.svg" alt="Флаг Германии">
+                                    <picture>
+                                        <source
+                                            type="image/webp"
+                                            srcset="assets/img/three/i-2@2x.webp 2x, assets/img/three/i-2@1x.webp 1x">
+                                        <source
+                                            type="image/png"
+                                            srcset="assets/img/three/i-2@2x.png 2x, assets/img/three/i-2@1x.png 1x">
+                                        <img class="slide-swiper-three__img" src="assets/img/three/i-2@1x.png" alt="Фотография дома">
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="swiper-slide swiper-three__slide slide-swiper-three">
+                                <a class="slide-swiper-three__body" href="#">
+                                    <span class="slide-swiper-three__title">Ger House</span>
+                                    <span class="slide-swiper-three__new">Новый проект</span>
+                                    <img class="slide-swiper-three__flag" src="assets/img/three/south_korea.svg" alt="Флаг Южной Кореи">
+                                    <picture>
+                                        <source
+                                            type="image/webp"
+                                            srcset="assets/img/three/i-3@2x.webp 2x, assets/img/three/i-3@1x.webp 1x">
+                                        <source
+                                            type="image/png"
+                                            srcset="assets/img/three/i-3@2x.png 2x, assets/img/three/i-3@1x.png 1x">
+                                        <img class="slide-swiper-three__img" src="assets/img/three/i-3@1x.png" alt="Фотография дома">
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="swiper-slide swiper-three__slide slide-swiper-three">
+                                <a class="slide-swiper-three__body" href="#">
+                                    <span class="slide-swiper-three__title">Baker</span>
+                                    <span class="slide-swiper-three__new">Новый проект</span>
+                                    <img class="slide-swiper-three__flag" src="assets/img/three/great_britain.svg" alt="Флаг Великобритании">
+                                    <picture>
+                                        <source
+                                            type="image/webp"
+                                            srcset="assets/img/three/i-4@2x.webp 2x, assets/img/three/i-4@1x.webp 1x">
+                                        <source
+                                            type="image/png"
+                                            srcset="assets/img/three/i-4@2x.png 2x, assets/img/three/i-4@1x.png 1x">
+                                        <img class="slide-swiper-three__img" src="assets/img/three/i-4@1x.png" alt="Фотография дома">
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="swiper-slide swiper-three__slide slide-swiper-three">
+                                <a class="slide-swiper-three__body" href="#">
+                                    <span class="slide-swiper-three__title">Geneva</span>
+                                    <span class="slide-swiper-three__new">Новый проект</span>
+                                    <img class="slide-swiper-three__flag" src="assets/img/three/switzerland.svg" alt="Флаг Швейцарии">
+                                    <picture>
+                                        <source
+                                            type="image/webp"
+                                            srcset="assets/img/three/i-5@2x.webp 2x, assets/img/three/i-5@1x.webp 1x">
+                                        <source
+                                            type="image/png"
+                                            srcset="assets/img/three/i-5@2x.png 2x, assets/img/three/i-5@1x.png 1x">
+                                        <img class="slide-swiper-three__img" src="assets/img/three/i-5@1x.png" alt="Фотография дома">
+                                    </picture>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="swiper-button-prev swiper-three__btn swiper-three__btn--prev"></div>
+                        <div class="swiper-button-next swiper-three__btn swiper-three__btn--next"></div>
+                    </div>
+                    <button class="swiper-button-next main-swiper__btn main-swiper__btn--next">
+                        <svg class="main-swiper__btn-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12 13.1727L16.95 8.22266L18.364 9.63666L12 16.0007L5.63599 9.63666L7.04999 8.22266L12 13.1727Z" fill="#090909"/>
+                        </svg>
+                        <span class="main-swiper__btn-title">ИЖС Стандарт</span>
+                    </button>
+                </div>
+            </div>
+            <!-- <div class="swiper-slide main-swiper__slide four"></div>
+            <div class="swiper-slide main-swiper__slide five"></div>
+            <div class="swiper-slide main-swiper__slide six"></div>
+            <div class="swiper-slide main-swiper__slide seven"></div>
+            <div class="swiper-slide main-swiper__slide eight"></div>
+            <div class="swiper-slide main-swiper__slide nine"></div>
+            <div class="swiper-slide main-swiper__slide ten"></div> -->
         </div>
         <div class="swiper-pagination main-swiper__pagination"></div>
         <div class="swiper-button-prev main-swiper__btn main-swiper__btn--prev"></div>
