Добавил разметку четвертого слайда

--- a/index.html
+++ b/index.html
@@ -192,13 +192,115 @@
                     </button>
                 </div>
             </div>
-            <!-- <div class="swiper-slide main-swiper__slide four"></div>
-            <div class="swiper-slide main-swiper__slide five"></div>
-            <div class="swiper-slide main-swiper__slide six"></div>
-            <div class="swiper-slide main-swiper__slide seven"></div>
-            <div class="swiper-slide main-swiper__slide eight"></div>
-            <div class="swiper-slide main-swiper__slide nine"></div>
-            <div class="swiper-slide main-swiper__slide ten"></div> -->
+            <div class="swiper-slide main-swiper__slide four">
+                <svg width="0" height="0" viewBox="0 0 16 15">
+                    <defs>
+                        <linearGradient id="half" x1="0" x2="100%" y1="0" y2="0">
+                            <stop offset="50%" stop-color="#FE7B5E"></stop>
+                            <stop offset="50%" stop-color="#E0E0E0"></stop>
+                        </linearGradient>
+                        <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 15" id="star">
+                            <path d="M7.52266 0.845492C7.67233 0.384837 8.32404 0.384836 8.47371 0.845491L9.90656 5.25532C9.97349 5.46133 10.1655 5.60081 10.3821 5.60081H15.0189C15.5032 5.60081 15.7046 6.22062 15.3127 6.50532L11.5615 9.23075C11.3863 9.35807 11.3129 9.58375 11.3799 9.78976L12.8127 14.1996C12.9624 14.6602 12.4352 15.0433 12.0433 14.7586L8.29208 12.0332C8.11684 11.9059 7.87954 11.9059 7.70429 12.0332L3.95307 14.7586C3.56121 15.0433 3.03397 14.6602 3.18365 14.1996L4.61649 9.78976C4.68343 9.58375 4.6101 9.35807 4.43485 9.23075L0.683628 6.50532C0.291772 6.22062 0.493159 5.60081 0.977521 5.60081H5.61429C5.8309 5.60081 6.02288 5.46133 6.08982 5.25532L7.52266 0.845492Z"/>
+                        </symbol>
+                    </defs>
+                </svg>
+                <div class="layout four__layout">
+                    <a class="three__logo" href="index.html">
+                        <svg class="three__logo-icon" viewBox="0 0 54 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M33.3409 14.0729L29.2009 8.00089L33.3409 1.92724H36.815L32.6755 8.00089L36.8153 14.0729H33.3409ZM28.743 14.0729H25.7755V1.94964L28.743 1.91945V14.0729ZM21.1776 14.0729H17.7031L21.8429 8.00089L17.7034 1.92724H21.1776L25.3177 8.00089L21.1776 14.0729ZM42.6261 14.0742V14.0614C41.0293 13.9981 39.6679 13.4128 38.5739 12.3191C37.3903 11.1042 36.8178 9.69236 36.8178 8.00089C36.8178 6.34723 37.4031 4.90371 38.5739 3.70812C39.7571 2.52536 41.2139 1.92724 42.9186 1.92724C44.56 1.92724 45.9979 2.48057 47.2001 3.56809C47.2447 3.61271 47.2957 3.65717 47.3402 3.6953L45.2471 5.74944C44.6809 5.1325 43.8667 4.76367 42.9186 4.76367C41.1184 4.76367 39.7632 6.15657 39.7632 8.00089C39.7632 9.84506 41.1184 11.2316 42.9186 11.2316L47.8052 11.2378L54 0H11.0012C9.65594 0 8.41678 0.731661 7.7675 1.90956L7.36154 2.64576V10.6145L12.7627 1.91945H16.6131V14.0549H13.6518V5.95195L8.61871 14.0549H4.40034V8.01761L0 16H41.8401C43.4836 16 45.0151 15.2784 46.0755 14.0742H42.6261Z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                    <span class="badge badge--soon three__badge">Скоро запуск</span>
+                    <button class="btn btn--ios btn--small three__btn-ios" type="button">
+                        <img class="btn__icon btn__icon--ios" src="assets/img/ios-small.svg" alt="" aria-hidden="true">
+                    </button>
+                    <button class="btn btn--android btn--small three__btn-android" type="button">
+                        <img class="btn__icon btn__icon--android" src="assets/img/android-small.svg" alt="" aria-hidden="true">
+                    </button>
+                    <h2 class="h h--2 three__h">Используйте ИЖС Стандарт — рейтинги застройщиков, чистота на стройке, онлайн договор и другое</h2>
+                    <ul class="four__content content-four">
+                        <li class="content-four__item item-four-content">
+                            <div class="item-four-content__rate rate-item-four-content">
+                                <p class="rate-item-four-content__wrap" aria-label="Рейтинг 4,5 из 5">
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star"></use>
+                                    </svg>
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star"></use>
+                                    </svg>
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star"></use>
+                                    </svg>
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star"></use>
+                                    </svg>
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star" fill="url(#half)"></use>
+                                    </svg>
+                                </p>
+                                <span class="rate-item-four-content__label">4,5</span>
+                            </div>
+                            <img class="item-four-content__img" src="assets/img/four/i-3.svg" alt="Логотип компании">
+                            <h3 class="item-four-content__title">Нью Хаус</h3>
+                        </li>
+                        <li class="content-four__item item-four-content">
+                            <div class="item-four-content__rate rate-item-four-content">
+                                <p class="rate-item-four-content__wrap" aria-label="Рейтинг 4,5 из 5">
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star"></use>
+                                    </svg>
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star"></use>
+                                    </svg>
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star"></use>
+                                    </svg>
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star"></use>
+                                    </svg>
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star" fill="url(#half)"></use>
+                                    </svg>
+                                </p>
+                                <span class="rate-item-four-content__label">4,5</span>
+                            </div>
+                            <img class="item-four-content__img" src="assets/img/four/i-2.svg" alt="Логотип компании">
+                            <h3 class="item-four-content__title">Правильный брус</h3>
+                        </li>
+                        <li class="content-four__item item-four-content">
+                            <div class="item-four-content__rate rate-item-four-content">
+                                <p class="rate-item-four-content__wrap" aria-label="Рейтинг 4,5 из 5">
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star"></use>
+                                    </svg>
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star"></use>
+                                    </svg>
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star"></use>
+                                    </svg>
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star"></use>
+                                    </svg>
+                                    <svg class="rate-item-four-content__icon rate-item-four-content__icon--active">
+                                        <use href="#star" fill="url(#half)"></use>
+                                    </svg>
+                                </p>
+                                <span class="rate-item-four-content__label">4,5</span>
+                            </div>
+                            <img class="item-four-content__img" src="assets/img/four/i-1.svg" alt="Логотип компании">
+                            <h3 class="item-four-content__title">HalleHouse</h3>
+                            <div class="item-four-content__shadow"></div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- <div class="swiper-slide main-swiper__slide five"></div> -->
+            <!-- <div class="swiper-slide main-swiper__slide six"></div> -->
+            <!-- <div class="swiper-slide main-swiper__slide seven"></div> -->
+            <!-- <div class="swiper-slide main-swiper__slide eight"></div> -->
+            <!-- <div class="swiper-slide main-swiper__slide nine"></div> -->
+            <!-- <div class="swiper-slide main-swiper__slide ten"></div> -->
         </div>
         <div class="swiper-pagination main-swiper__pagination"></div>
         <div class="swiper-button-prev main-swiper__btn main-swiper__btn--prev"></div>
