--- a/index.html
+++ b/index.html
@@ -205,19 +205,19 @@
                     </defs>
                 </svg>
                 <div class="layout four__layout">
-                    <a class="three__logo" href="index.html">
-                        <svg class="three__logo-icon" viewBox="0 0 54 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a class="four__logo" href="index.html">
+                        <svg class="four__logo-icon" viewBox="0 0 54 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M33.3409 14.0729L29.2009 8.00089L33.3409 1.92724H36.815L32.6755 8.00089L36.8153 14.0729H33.3409ZM28.743 14.0729H25.7755V1.94964L28.743 1.91945V14.0729ZM21.1776 14.0729H17.7031L21.8429 8.00089L17.7034 1.92724H21.1776L25.3177 8.00089L21.1776 14.0729ZM42.6261 14.0742V14.0614C41.0293 13.9981 39.6679 13.4128 38.5739 12.3191C37.3903 11.1042 36.8178 9.69236 36.8178 8.00089C36.8178 6.34723 37.4031 4.90371 38.5739 3.70812C39.7571 2.52536 41.2139 1.92724 42.9186 1.92724C44.56 1.92724 45.9979 2.48057 47.2001 3.56809C47.2447 3.61271 47.2957 3.65717 47.3402 3.6953L45.2471 5.74944C44.6809 5.1325 43.8667 4.76367 42.9186 4.76367C41.1184 4.76367 39.7632 6.15657 39.7632 8.00089C39.7632 9.84506 41.1184 11.2316 42.9186 11.2316L47.8052 11.2378L54 0H11.0012C9.65594 0 8.41678 0.731661 7.7675 1.90956L7.36154 2.64576V10.6145L12.7627 1.91945H16.6131V14.0549H13.6518V5.95195L8.61871 14.0549H4.40034V8.01761L0 16H41.8401C43.4836 16 45.0151 15.2784 46.0755 14.0742H42.6261Z" fill="currentColor"/>
                         </svg>
                     </a>
-                    <span class="badge badge--soon three__badge">Скоро запуск</span>
-                    <button class="btn btn--ios btn--small three__btn-ios" type="button">
+                    <span class="badge badge--soon four__badge">Скоро запуск</span>
+                    <button class="btn btn--ios btn--small four__btn-ios" type="button">
                         <img class="btn__icon btn__icon--ios" src="assets/img/ios-small.svg" alt="" aria-hidden="true">
                     </button>
-                    <button class="btn btn--android btn--small three__btn-android" type="button">
+                    <button class="btn btn--android btn--small four__btn-android" type="button">
                         <img class="btn__icon btn__icon--android" src="assets/img/android-small.svg" alt="" aria-hidden="true">
                     </button>
-                    <h2 class="h h--2 three__h">Используйте ИЖС Стандарт — рейтинги застройщиков, чистота на стройке, онлайн договор и другое</h2>
+                    <h2 class="h h--2 four__h">Используйте ИЖС Стандарт — рейтинги застройщиков, чистота на стройке, онлайн договор и другое</h2>
                     <ul class="four__content content-four">
                         <li class="content-four__item item-four-content">
                             <div class="item-four-content__rate rate-item-four-content">
@@ -295,7 +295,27 @@
                     </ul>
                 </div>
             </div>
-            <!-- <div class="swiper-slide main-swiper__slide five"></div> -->
+            <div class="swiper-slide main-swiper__slide five">
+                <div class="layout five__layout">
+                    <a class="five__logo" href="index.html">
+                        <svg class="five__logo-icon" viewBox="0 0 54 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M33.3409 14.0729L29.2009 8.00089L33.3409 1.92724H36.815L32.6755 8.00089L36.8153 14.0729H33.3409ZM28.743 14.0729H25.7755V1.94964L28.743 1.91945V14.0729ZM21.1776 14.0729H17.7031L21.8429 8.00089L17.7034 1.92724H21.1776L25.3177 8.00089L21.1776 14.0729ZM42.6261 14.0742V14.0614C41.0293 13.9981 39.6679 13.4128 38.5739 12.3191C37.3903 11.1042 36.8178 9.69236 36.8178 8.00089C36.8178 6.34723 37.4031 4.90371 38.5739 3.70812C39.7571 2.52536 41.2139 1.92724 42.9186 1.92724C44.56 1.92724 45.9979 2.48057 47.2001 3.56809C47.2447 3.61271 47.2957 3.65717 47.3402 3.6953L45.2471 5.74944C44.6809 5.1325 43.8667 4.76367 42.9186 4.76367C41.1184 4.76367 39.7632 6.15657 39.7632 8.00089C39.7632 9.84506 41.1184 11.2316 42.9186 11.2316L47.8052 11.2378L54 0H11.0012C9.65594 0 8.41678 0.731661 7.7675 1.90956L7.36154 2.64576V10.6145L12.7627 1.91945H16.6131V14.0549H13.6518V5.95195L8.61871 14.0549H4.40034V8.01761L0 16H41.8401C43.4836 16 45.0151 15.2784 46.0755 14.0742H42.6261Z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                    <span class="badge badge--soon five__badge">Скоро запуск</span>
+                    <button class="btn btn--ios btn--small five__btn-ios" type="button">
+                        <img class="btn__icon btn__icon--ios" src="assets/img/ios-small.svg" alt="" aria-hidden="true">
+                    </button>
+                    <button class="btn btn--android btn--small five__btn-android" type="button">
+                        <img class="btn__icon btn__icon--android" src="assets/img/android-small.svg" alt="" aria-hidden="true">
+                    </button>
+                    <div class="five__card card-five">
+                        <span class="card-five__name">Genius</span>
+                        <h3 class="h h--3 card-five__h">218 000 ₽ уже на вашем счёте</h3>
+                    </div>
+                    <h2 class="h h--2 five__h">Не тратьте 218 000 ₽ и 380 часов, задействуйте Genius — все инженеры и Росреестр в одном окне за 0 ₽</h2>
+                </div>
+            </div>
             <!-- <div class="swiper-slide main-swiper__slide six"></div> -->
             <!-- <div class="swiper-slide main-swiper__slide seven"></div> -->
             <!-- <div class="swiper-slide main-swiper__slide eight"></div> -->
