Добавил разметку шестого слайда

--- a/index.html
+++ b/index.html
@@ -294,6 +294,12 @@
                         </li>
                     </ul>
                 </div>
+                <button class="swiper-button-next main-swiper__btn main-swiper__btn--next">
+                    <svg class="main-swiper__btn-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 13.1727L16.95 8.22266L18.364 9.63666L12 16.0007L5.63599 9.63666L7.04999 8.22266L12 13.1727Z" fill="#090909"/>
+                    </svg>
+                    <span class="main-swiper__btn-title">Удобство</span>
+                </button>
             </div>
             <div class="swiper-slide main-swiper__slide five">
                 <div class="layout five__layout">
@@ -315,8 +321,93 @@
                     </div>
                     <h2 class="h h--2 five__h">Не тратьте 218 000 ₽ и 380 часов, задействуйте Genius — все инженеры и Росреестр в одном окне за 0 ₽</h2>
                 </div>
+                <button class="swiper-button-next main-swiper__btn main-swiper__btn--next">
+                    <svg class="main-swiper__btn-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 13.1727L16.95 8.22266L18.364 9.63666L12 16.0007L5.63599 9.63666L7.04999 8.22266L12 13.1727Z" fill="#090909"/>
+                    </svg>
+                    <span class="main-swiper__btn-title">Удобство</span>
+                </button>
             </div>
-            <!-- <div class="swiper-slide main-swiper__slide six"></div> -->
+            <div class="swiper-slide main-swiper__slide six">
+                <div class="layout six__layout">
+                    <a class="six__logo" href="index.html">
+                        <svg class="six__logo-icon" viewBox="0 0 54 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M33.3409 14.0729L29.2009 8.00089L33.3409 1.92724H36.815L32.6755 8.00089L36.8153 14.0729H33.3409ZM28.743 14.0729H25.7755V1.94964L28.743 1.91945V14.0729ZM21.1776 14.0729H17.7031L21.8429 8.00089L17.7034 1.92724H21.1776L25.3177 8.00089L21.1776 14.0729ZM42.6261 14.0742V14.0614C41.0293 13.9981 39.6679 13.4128 38.5739 12.3191C37.3903 11.1042 36.8178 9.69236 36.8178 8.00089C36.8178 6.34723 37.4031 4.90371 38.5739 3.70812C39.7571 2.52536 41.2139 1.92724 42.9186 1.92724C44.56 1.92724 45.9979 2.48057 47.2001 3.56809C47.2447 3.61271 47.2957 3.65717 47.3402 3.6953L45.2471 5.74944C44.6809 5.1325 43.8667 4.76367 42.9186 4.76367C41.1184 4.76367 39.7632 6.15657 39.7632 8.00089C39.7632 9.84506 41.1184 11.2316 42.9186 11.2316L47.8052 11.2378L54 0H11.0012C9.65594 0 8.41678 0.731661 7.7675 1.90956L7.36154 2.64576V10.6145L12.7627 1.91945H16.6131V14.0549H13.6518V5.95195L8.61871 14.0549H4.40034V8.01761L0 16H41.8401C43.4836 16 45.0151 15.2784 46.0755 14.0742H42.6261Z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                    <span class="badge badge--soon six__badge">Скоро запуск</span>
+                    <button class="btn btn--ios btn--small six__btn-ios" type="button">
+                        <img class="btn__icon btn__icon--ios" src="assets/img/ios-small.svg" alt="" aria-hidden="true">
+                    </button>
+                    <button class="btn btn--android btn--small six__btn-android" type="button">
+                        <img class="btn__icon btn__icon--android" src="assets/img/android-small.svg" alt="" aria-hidden="true">
+                    </button>
+                    <span class="badge badge--club six__badge">ИЖС Club</span>
+                    <h2 class="h h--2 six__h">Сохраните до миллиона рублей с программой лояльности ИЖС Club</h2>
+                    <div class="six__content">
+                        <table class="six__table table-six">
+                            <tbody>
+                                <tr class="table-six__row">
+                                    <td class="table-six__col">
+                                        R E D
+                                    </td>
+                                    <td class="table-six__col">
+                                        — 500 000 ₽
+                                    </td>
+                                </tr>
+                                <tr class="table-six__row">
+                                    <td class="table-six__col">
+                                        Landscape
+                                    </td>
+                                    <td class="table-six__col">
+                                        — 55 000 ₽
+                                    </td>
+                                </tr>
+                                <tr class="table-six__row">
+                                    <td class="table-six__col">
+                                        ИЖС Genius
+                                    </td>
+                                    <td class="table-six__col">
+                                        — 218 000 ₽
+                                    </td>
+                                </tr>
+                                <tr class="table-six__row">
+                                    <td class="table-six__col">
+                                        Вывоз мусора
+                                    </td>
+                                    <td class="table-six__col">
+                                        — 89 000 ₽
+                                    </td>
+                                </tr>
+                                <tr class="table-six__row">
+                                    <td class="table-six__col">
+                                        Доставка
+                                    </td>
+                                    <td class="table-six__col">
+                                        — 65 000 ₽
+                                    </td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr class="table-six__row">
+                                    <td class="table-six__col table-six__col--tfoot">
+                                        Вы экономите
+                                    </td>
+                                    <td class="table-six__col table-six__col--tfoot">
+                                        927 000 ₽
+                                    </td>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+                <button class="swiper-button-next main-swiper__btn main-swiper__btn--next">
+                    <svg class="main-swiper__btn-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 13.1727L16.95 8.22266L18.364 9.63666L12 16.0007L5.63599 9.63666L7.04999 8.22266L12 13.1727Z" fill="#090909"/>
+                    </svg>
+                    <span class="main-swiper__btn-title">Детали</span>
+                </button>
+            </div>
             <!-- <div class="swiper-slide main-swiper__slide seven"></div> -->
             <!-- <div class="swiper-slide main-swiper__slide eight"></div> -->
             <!-- <div class="swiper-slide main-swiper__slide nine"></div> -->
