--- a/index.html
+++ b/index.html
@@ -463,7 +463,109 @@
                     <span class="main-swiper__btn-title">Скачать приложение</span>
                 </button>
             </div>
-            <!-- <div class="swiper-slide main-swiper__slide eight"></div> -->
+            <div class="swiper-slide main-swiper__slide eight">
+                <div class="layout eight__layout">
+                    <a class="eight__logo" href="index.html">
+                        <svg class="eight__logo-icon" width="54" height="16" viewBox="0 0 54 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M33.3409 14.0729L29.2009 8.00089L33.3409 1.92724H36.815L32.6755 8.00089L36.8153 14.0729H33.3409ZM28.743 14.0729H25.7755V1.94964L28.743 1.91945V14.0729ZM21.1776 14.0729H17.7031L21.8429 8.00089L17.7034 1.92724H21.1776L25.3177 8.00089L21.1776 14.0729ZM42.6261 14.0742V14.0614C41.0293 13.9981 39.6679 13.4128 38.5739 12.3191C37.3903 11.1042 36.8178 9.69236 36.8178 8.00089C36.8178 6.34723 37.4031 4.90371 38.5739 3.70812C39.7571 2.52536 41.2139 1.92724 42.9186 1.92724C44.56 1.92724 45.9979 2.48057 47.2001 3.56809C47.2447 3.61271 47.2957 3.65717 47.3402 3.6953L45.2471 5.74944C44.6809 5.1325 43.8667 4.76367 42.9186 4.76367C41.1184 4.76367 39.7632 6.15657 39.7632 8.00089C39.7632 9.84506 41.1184 11.2316 42.9186 11.2316L47.8052 11.2378L54 0H11.0012C9.65594 0 8.41678 0.731661 7.7675 1.90956L7.36154 2.64576V10.6145L12.7627 1.91945H16.6131V14.0549H13.6518V5.95195L8.61871 14.0549H4.40034V8.01761L0 16H41.8401C43.4836 16 45.0151 15.2784 46.0755 14.0742H42.6261Z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                    <h2 class="h h--2 eight__h">Установите приложение и начинайте строить</h2>
+                    <div class="eight__btn-wrap">
+                        <button class="btn btn--ios btn--large eight__btn-ios" type="button">
+                            <img class="btn__icon btn__icon--ios" src="assets/img/ios-large.svg" alt="" aria-hidden="true">
+                        </button>
+                        <button class="btn btn--android btn--large eight__btn-android" type="button">
+                            <img class="btn__icon btn__icon--android" src="assets/img/android-large.svg" alt="" aria-hidden="true">
+                        </button>
+                        <span class="badge badge--soon eight__badge">Скоро запуск</span>
+                    </div>
+                    <div class="swiper eight__swiper swiper-eight">
+                        <div class="swiper-wrapper swiper-eight__wrapper">
+                            <div class="swiper-slide swiper-eight__slide slide-swiper-eight">
+                                <a class="slide-swiper-eight__body" href="#">
+                                    <span class="slide-swiper-eight__title">Forest</span>
+                                    <span class="slide-swiper-eight__new">Новый проект</span>
+                                    <img class="slide-swiper-eight__flag" src="assets/img/three/Czech.svg" alt="Флаг Чехии">
+                                    <picture>
+                                        <source
+                                            type="image/webp"
+                                            srcset="assets/img/three/i-1@2x.webp 2x, assets/img/three/i-1@1x.webp 1x">
+                                        <source
+                                            type="image/png"
+                                            srcset="assets/img/three/i-1@2x.png 2x, assets/img/three/i-1@1x.png 1x">
+                                        <img class="slide-swiper-eight__img" style="max-width: 100%" src="assets/img/three/i-1@1x.png" alt="Фотография дома">
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="swiper-slide swiper-eight__slide slide-swiper-eight">
+                                <a class="slide-swiper-eight__body" href="#">
+                                    <span class="slide-swiper-eight__title">Man’s Land</span>
+                                    <span class="slide-swiper-eight__new">Новый проект</span>
+                                    <img class="slide-swiper-eight__flag" src="assets/img/three/germany.svg" alt="Флаг Германии">
+                                    <picture>
+                                        <source
+                                            type="image/webp"
+                                            srcset="assets/img/three/i-2@2x.webp 2x, assets/img/three/i-2@1x.webp 1x">
+                                        <source
+                                            type="image/png"
+                                            srcset="assets/img/three/i-2@2x.png 2x, assets/img/three/i-2@1x.png 1x">
+                                        <img class="slide-swiper-eight__img" style="max-width: 100%" src="assets/img/three/i-2@1x.png" alt="Фотография дома">
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="swiper-slide swiper-eight__slide slide-swiper-eight">
+                                <a class="slide-swiper-eight__body" href="#">
+                                    <span class="slide-swiper-eight__title">Ger House</span>
+                                    <span class="slide-swiper-eight__new">Новый проект</span>
+                                    <img class="slide-swiper-eight__flag" src="assets/img/three/south_korea.svg" alt="Флаг Южной Кореи">
+                                    <picture>
+                                        <source
+                                            type="image/webp"
+                                            srcset="assets/img/three/i-3@2x.webp 2x, assets/img/three/i-3@1x.webp 1x">
+                                        <source
+                                            type="image/png"
+                                            srcset="assets/img/three/i-3@2x.png 2x, assets/img/three/i-3@1x.png 1x">
+                                        <img class="slide-swiper-eight__img" style="max-width: 100%" src="assets/img/three/i-3@1x.png" alt="Фотография дома">
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="swiper-slide swiper-eight__slide slide-swiper-eight">
+                                <a class="slide-swiper-eight__body" href="#">
+                                    <span class="slide-swiper-eight__title">Baker</span>
+                                    <span class="slide-swiper-eight__new">Новый проект</span>
+                                    <img class="slide-swiper-eight__flag" src="assets/img/three/great_britain.svg" alt="Флаг Великобритании">
+                                    <picture>
+                                        <source
+                                            type="image/webp"
+                                            srcset="assets/img/three/i-4@2x.webp 2x, assets/img/three/i-4@1x.webp 1x">
+                                        <source
+                                            type="image/png"
+                                            srcset="assets/img/three/i-4@2x.png 2x, assets/img/three/i-4@1x.png 1x">
+                                        <img class="slide-swiper-eight__img" style="max-width: 100%" src="assets/img/three/i-4@1x.png" alt="Фотография дома">
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="swiper-slide swiper-eight__slide slide-swiper-eight">
+                                <a class="slide-swiper-eight__body" href="#">
+                                    <span class="slide-swiper-eight__title">Geneva</span>
+                                    <span class="slide-swiper-eight__new">Новый проект</span>
+                                    <img class="slide-swiper-eight__flag" src="assets/img/three/switzerland.svg" alt="Флаг Швейцарии">
+                                    <picture>
+                                        <source
+                                            type="image/webp"
+                                            srcset="assets/img/three/i-5@2x.webp 2x, assets/img/three/i-5@1x.webp 1x">
+                                        <source
+                                            type="image/png"
+                                            srcset="assets/img/three/i-5@2x.png 2x, assets/img/three/i-5@1x.png 1x">
+                                        <img class="slide-swiper-eight__img" style="max-width: 100%" src="assets/img/three/i-5@1x.png" alt="Фотография дома">
+                                    </picture>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="swiper-pagination main-swiper__pagination"></div>
         <div class="swiper-button-prev main-swiper__btn main-swiper__btn--prev"></div>
